--- a/email_theme/senha.pug
+++ b/email_theme/senha.pug
@@ -1,122 +1,27 @@
-doctype html
-html(xmlns='http://www.w3.org/1999/xhtml', xmlns:v='urn:schemas-microsoft-com:vml', xmlns:o='urn:schemas-microsoft-com:office:office')
+html
   head
     title
-    // [if !mso] <!
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    // <![endif]
     meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    style(type='text/css').
-      #outlook a { padding:0; }
-      .ReadMsgBody { width:100%; }
-      .ExternalClass { width:100%; }
-      .ExternalClass * { line-height:100%; }
-      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
-      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
-      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
-      p { display:block;margin:13px 0; }
-    // [if !mso] <!
-    style(type='text/css').
-      @media only screen and (max-width:480px) {
-      @-ms-viewport { width:320px; }
-      @viewport { width:320px; }
-      }
-    // <![endif]
-    //if mso
-      xml
-        o:officedocumentsettings
-          o:allowpng
-            o:pixelsperinch 96
-    //if lte mso 11
-      style(type='text/css').
-        .outlook-group-fix { width:100% !important; }
-    // [if !mso] <!
-    link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700', rel='stylesheet', type='text/css')
-    style(type='text/css').
-      @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700);
-    // <![endif]
-    style(type='text/css').
-      @media only screen and (min-width:480px) {
-      .mj-column-per-100 { width:100% !important; }
-      }
-    style(type='text/css').
-  body(style='background-color:#ffffff;')
-    div(style='background-color:#ffffff;')
-      //if mso | IE
-        table(align='center', border='0', cellpadding='0', cellspacing='0', style='width:600px;', width='600')
-          tr
-            td(style='line-height:0px;font-size:0px;mso-line-height-rule:exactly;')
-      div(style='background:#ffffff;background-color:#ffffff;Margin:0px auto;max-width:600px;')
-        table(align='center', border='0', cellpadding='0', cellspacing='0', role='presentation', style='background:#ffffff;background-color:#ffffff;width:100%;')
-          tbody
-            tr
-              td(style='direction:ltr;font-size:0px;padding:20px 0;padding-bottom:0px;padding-top:0;text-align:center;vertical-align:top;')
-                //if mso | IE
-                  table(role='presentation', border='0', cellpadding='0', cellspacing='0')
-                    tr
-                      td(style='vertical-align:top;width:600px;')
-                .mj-column-per-100.outlook-group-fix(style='font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;')
-                  table(border='0', cellpadding='0', cellspacing='0', role='presentation', style='vertical-align:top;', width='100%')
-                    tr
-                      td(align='center', style='font-size:0px;padding:10px 25px;padding-top:0;padding-right:0px;padding-bottom:0px;padding-left:0px;word-break:break-word;')
-                        table(align='center', border='0', cellpadding='0', cellspacing='0', role='presentation', style='border-collapse:collapse;border-spacing:0px;')
-                          tbody
-                            tr
-                              td(style='width:600px;')
-                                img(height='auto', src='./header.png', style='border:none;display:block;outline:none;text-decoration:none;width:100%;', width='600')
-                //if mso | IE
-      //if mso | IE
-        table(align='center', border='0', cellpadding='0', cellspacing='0', style='width:600px;', width='600')
-          tr
-            td(style='line-height:0px;font-size:0px;mso-line-height-rule:exactly;')
-      div(style='background:#fff;background-color:#fff;Margin:0px auto;max-width:600px;')
-        table(align='center', border='0', cellpadding='0', cellspacing='0', role='presentation', style='background:#fff;background-color:#fff;width:100%;')
-          tbody
-            tr
-              td(style='direction:ltr;font-size:0px;padding:20px 0;padding-bottom:0px;padding-top:0;text-align:center;vertical-align:top;')
-                //if mso | IE
-                  table(role='presentation', border='0', cellpadding='0', cellspacing='0')
-                    tr
-                      td(style='vertical-align:top;width:600px;')
-      //if mso | IE
-    //if mso | IE
-      table(align='center', border='0', cellpadding='0', cellspacing='0', style='width:600px;', width='600')
-        tr
-          td(style='line-height:0px;font-size:0px;mso-line-height-rule:exactly;')
-    div(style='background:#fff;background-color:#fff;Margin:0px auto;max-width:600px;')
-      table(align='center', border='0', cellpadding='0', cellspacing='0', role='presentation', style='background:#fff;background-color:#fff;width:100%;')
-        tbody
-          tr
-            td(style='direction:ltr;font-size:0px;padding:20px 0;padding-bottom:20px;padding-top:20;text-align:center;vertical-align:top;')
-              //if mso | IE
-                table(role='presentation', border='0', cellpadding='0', cellspacing='0')
-                  tr
-                    td(style='vertical-align:middle;width:600px;')
-              .mj-column-per-100.outlook-group-fix(style='font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:middle;width:100%;')
-                table(border='0', cellpadding='0', cellspacing='0', role='presentation', style='vertical-align:middle;', width='100%')
-                  tr
-                    td(align='left', style='font-size:0px;padding:10px 25px;padding-right:25px;padding-left:25px;word-break:break-word;')
-                      div(style='font-family:open Sans Helvetica, Arial, sans-serif;font-size:22px;line-height:1;text-align:left;color:#000;')
-                        span(style='color:#000; font-weight: bold') Oi, #{notification['nome']} #{notification['sobrenome']}
-                        br
-                        br
-                        |  #{notification['mensagem']}
-                        br
-                        br
-                        |  Clique no botão abaixo para alterar.
-                  tr
-                    td(align='left', vertical-align='middle', style='font-size:0px;padding:10px 25px;word-break:break-word;')
-                      table(align='left', border='0', cellpadding='0', cellspacing='0', role='presentation', style='border-collapse:separate;line-height:100%;width:100%')
-                        tr
-                          td(align='center', bgcolor='#ffffff', role='presentation', style='border:none;border-radius:10px;color:#1AA0E1;cursor:auto;padding:10px 25px;', valign='middle')
-                            br
-                            p(style='font-family:open Sans Helvetica, Arial, sans-serif;font-size:22px;font-weight:bold;line-height:120%;Margin:0;text-decoration:none;text-transform:none;')
-                              a(href='#', style='background: #01BCA2;\
-                              color: rgb(255, 255, 255);\
-                              padding: 12px 15px;\
-                              font-size: 18px;\
-                              font-weight: lighter;\
-                              text-decoration: none;')  Alterar Senha
-              //if mso | IE
-    //if mso | IE
+  body
+    table(align='center')
+      tr
+        td
+          img(src='./header.png', alt='Recuperar Senha')
+      tr
+        td
+          p(style="color:#000; font-weight: bold;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px")
+            | Oi, #{notification['nome']} #{notification['sobrenome']}
+          p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
+            | #{notification['mensagem']}
+          p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
+            | Clique no botão abaixo para alterar.
+          p(style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px")
+            a(href='#', style='background: #01BCA2;\
+            color: #fff;\
+            padding: 12px 15px;\
+            font-size: 18px;\
+            font-weight: lighter;\
+            text-decoration: none;')
+              | Alterar Senha
