--- a/email_theme/conta_empresa_criada.pug
+++ b/email_theme/conta_empresa_criada.pug
@@ -13,16 +13,10 @@ html
       tr
         td
           p(style="color:#000; font-weight: bold;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px")
-            | Oi, #{notification['nome']} #{notification['sobrenome']}
+            | Oi, #{notification.nome} #{notification.sobrenome}
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
-            | Você solicitou a alteração de sua senha.
+            | #{notification.mensagem}
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
-            | Clique no botão abaixo para alterar.
-          p(style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px")
-            a(href=`${notification.url_senha}`, style='background: #01BCA2;\
-            color: #fff;\
-            padding: 12px 15px;\
-            font-size: 18px;\
-            font-weight: lighter;\
-            text-decoration: none;')
-              | Alterar Senha
+            | Agora é só aguardar aprovação do administrador.
+          p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
+            | Até logo!
