--- a/email_theme/empresa_aprovada.pug
+++ b/email_theme/empresa_aprovada.pug
@@ -13,16 +13,16 @@ html
       tr
         td
           p(style="color:#000; font-weight: bold;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px")
-            | Oi, #{notification['nome']} #{notification['sobrenome']}
+            | Oi, [[FirstName]]
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
-            | Você solicitou a alteração de sua senha.
+            | sua empresa foi aprovada!
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
-            | Clique no botão abaixo para alterar.
+            | Clique no botão abaixo para ativá-la.
           p(style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px")
-            a(href=`${notification.url_senha}`, style='background: #01BCA2;\
+            a(href='#', style='background: #01BCA2;\
             color: #fff;\
             padding: 12px 15px;\
             font-size: 18px;\
             font-weight: lighter;\
             text-decoration: none;')
-              | Alterar Senha
+              | Ativar
