Changing api endpoint

--- a/email_theme/empresa_aprovada.pug
+++ b/email_theme/empresa_aprovada.pug
@@ -13,7 +13,7 @@ html
       tr
         td
           p(style="color:#000; font-weight: bold;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px")
-            | Oi, [[FirstName]]
+            | Oi, #{notification['nome']} #{notification['sobrenome']}
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
             | sua empresa foi aprovada!
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
