--- a/email_theme/empresa_negocios_vagas.pug
+++ b/email_theme/empresa_negocios_vagas.pug
@@ -13,9 +13,9 @@ html
       tr
         td
           p(style="color:#000; font-weight: bold;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px")
-            | Oi, #{notification.nome} #{notification.sobrenome}
+            | Oi, #{notification['nome']} #{notification['sobrenome']}
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
-            | #{notification.mensagem}
+            | #{notification['mensagem']}
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
             | Clique no botão abaixo para acessar.
           p(style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px")
