--- a/email_theme/empresa_aprovada.pug
+++ b/email_theme/empresa_aprovada.pug
@@ -19,7 +19,7 @@ html
           p(style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;")
             | Clique no botão abaixo para ativá-la.
           p(style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px")
-            a(href='#', style='background: #01BCA2;\
+            a(href=`${notification.url_empresa}`, style='background: #01BCA2;\
             color: #fff;\
             padding: 12px 15px;\
             font-size: 18px;\
